Updated structure for installing Speck as a package using pip

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["hatchling","numpy","gpiozero","GitPython","subprocess"]
+requires = ["hatchling","numpy","gpiozero","GitPython",]
 build-backend = "hatchling.build"
 [project]
 name = "Speck"
